--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^1.18.2",
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
+    "vue-lazyload": "^1.3.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
